--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "web-vitals": "^2.1.0"
   },
   "scripts": {
-    "predeploy": "yarn run build && mv build docs",
+    "predeploy": "yarn run build",
+    "deploy": "gh-pages -b deploy -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
